made 3 columns in skills divdied into fe/be/design, also updated js to remove isotope initilization from main file to remove console errors on non isotope page, made sep js file and ported into isotope pages tested and works

--- a/resume.html
+++ b/resume.html
@@ -35,8 +35,14 @@
                     <div class="block-content">
                         <div class="row">
                             <h3 class="title centerUp">Skills</h3>
-                            <div class="col-sm-6">
+                            <div class="col-sm-4">
                                 <label class="progress-bar-label">Semantic HTML5</label>
+                                <div class="progress">
+                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                                        <span>100%</span>
+                                    </div>
+                                </div>
+                                <label class="progress-bar-label">CSS3</label>
                                 <div class="progress">
                                     <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                                         <span>100%</span>
@@ -48,7 +54,25 @@
                                         <span>100%</span>
                                     </div>
                                 </div>
+                                <label class="progress-bar-label">SCSS/Sass</label>
+                                <div class="progress">
+                                    <div style="width: 90%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
+                                        <span>90%</span>
+                                    </div>
+                                </div>
                                 <label class="progress-bar-label">Javascript</label>
+                                <div class="progress">
+                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
+                                        <span>100%</span>
+                                    </div>
+                                </div>
+                                <label class="progress-bar-label">jQuery</label>
+                                <div class="progress">
+                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
+                                        <span>100%</span>
+                                    </div>
+                                </div>
+                                <label class="progress-bar-label">AJAX</label>
                                 <div class="progress">
                                     <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
                                         <span>100%</span>
@@ -60,28 +84,36 @@
                                         <span>95%</span>
                                     </div>
                                 </div>
+                                <label class="progress-bar-label">Vue.JS</label>
+                                <div class="progress">
+                                    <div style="width: 70%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
+                                        <span>70%</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <label class="progress-bar-label">Express/Node.JS</label>
+                                <div class="progress">
+                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                                        <span>100%</span>
+                                    </div>
+                                </div>
                                 <label class="progress-bar-label">MongoDB/NoSQL</label>
                                 <div class="progress">
                                     <div style="width: 90%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
                                         <span>90%</span>
                                     </div>
                                 </div>
-                                <label class="progress-bar-label">AJAX</label>
+                                <label class="progress-bar-label">MySQL</label>
+                                <div class="progress">
+                                    <div style="width: 90%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
+                                        <span>90%</span>
+                                    </div>
+                                </div>
+                                <label class="progress-bar-label">Git</label>
                                 <div class="progress">
                                     <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
                                         <span>100%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Vue.JS</label>
-                                <div class="progress">
-                                    <div style="width: 60%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>60%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Angular.JS</label>
-                                <div class="progress">
-                                    <div style="width: 50%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>50%</span>
                                     </div>
                                 </div>
                                 <label class="progress-bar-label">C#/asp.NET</label>
@@ -90,10 +122,48 @@
                                         <span>50%</span>
                                     </div>
                                 </div>
+                                <label class="progress-bar-label">Wordpress</label>
+                                <div class="progress">
+                                    <div style="width: 70%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
+                                        <span>70%</span>
+                                    </div>
+                                </div>
+                                <label class="progress-bar-label">Visual Basic</label>
+                                <div class="progress">
+                                    <div style="width: 80%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
+                                        <span>80%</span>
+                                    </div>
+                                </div>
+                                <label class="progress-bar-label">Angular.JS</label>
+                                <div class="progress">
+                                    <div style="width: 50%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                                        <span>50%</span>
+                                    </div>
+                                </div>
+                                <label class="progress-bar-label">Angular 2/4</label>
+                                <div class="progress">
+                                    <div style="width: 50%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                                        <span>50%</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
                                 <label class="progress-bar-label">Photoshop/Gimp</label>
                                 <div class="progress">
                                     <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
                                         <span>100%</span>
+                                    </div>
+                                </div>
+                                <label class="progress-bar-label">Illustrator</label>
+                                <div class="progress">
+                                    <div style="width: 70%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
+                                        <span>70%</span>
+                                    </div>
+                                </div>
+                                <label class="progress-bar-label">Sketch</label>
+                                <div class="progress">
+                                    <div style="width: 50%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                                        <span>50%</span>
                                     </div>
                                 </div>
                                 <label class="progress-bar-label">SVG</label>
@@ -108,75 +178,25 @@
                                         <span>100%</span>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <label class="progress-bar-label">CSS3</label>
+                                <label class="progress-bar-label">Logo Design</label>
                                 <div class="progress">
-                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
                                         <span>100%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">SCSS/Sass</label>
-                                <div class="progress">
-                                    <div style="width: 90%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>90%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">jQuery</label>
-                                <div class="progress">
-                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>100%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Express/Node.JS</label>
-                                <div class="progress">
-                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>100%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">MySQL</label>
-                                <div class="progress">
-                                    <div style="width: 80%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
-                                        <span>80%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Git</label>
-                                <div class="progress">
-                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>100%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Wordpress</label>
-                                <div class="progress">
-                                    <div style="width: 70%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>70%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Angular 2/4</label>
-                                <div class="progress">
-                                    <div style="width: 50%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>50%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Visual Basic</label>
-                                <div class="progress">
-                                    <div style="width: 80%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
-                                        <span>80%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Illustrator</label>
-                                <div class="progress">
-                                    <div style="width: 60%;" class="progress-bar" role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">
-                                        <span>60%</span>
-                                    </div>
-                                </div>
-                                <label class="progress-bar-label">Sketch</label>
-                                <div class="progress">
-                                    <div style="width: 40%;" class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                                        <span>40%</span>
                                     </div>
                                 </div>
                                 <label class="progress-bar-label">Responsive Design</label>
+                                <div class="progress">
+                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
+                                        <span>100%</span>
+                                    </div>
+                                </div>
+                                <label class="progress-bar-label">Customer Studies</label>
+                                <div class="progress">
+                                    <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
+                                        <span>100%</span>
+                                    </div>
+                                </div>
+                                <label class="progress-bar-label">Business Analytics</label>
                                 <div class="progress">
                                     <div style="width: 100%;" class="progress-bar" role="progressbar" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100">
                                         <span>100%</span>
