--- a/portfolio.html
+++ b/portfolio.html
@@ -542,11 +542,10 @@
             </div>
         </div>
     </div>
-
     <script src='js/jquery.min.js'></script>
 	<script src='js/parallax.min.js'></script>
     <script src='js/isotope.pkgd.js'></script>
-    <script src="js/header.js"></script>
+    <script src='js/isotopeStarter.js'></script>
     <script src="js/main.js"></script>
 </body>
 </html>
