updated meta on home

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Joe Wright | Developer</title>
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="description" content="Joe Wright Web Developer Full Stack React Homepage">
-	<meta name="keywords" content="Joe Wright, Web Developer, Full Stack, React, Node, Raleigh, Durham, Carrboro, Chapel Hill, North Carolina">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="description" content="The most powerful CV / RESUME template">
 	<meta name="keywords" content="Enter, your, keywords">
-	<link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/plugins.min.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
