updated og meta

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 	<title>Joe Wright | Developer</title>
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<meta name="description" content="Joe Wright Web Developer Full Stack React Homepage">
+    <meta property="og:title" content="Joe Wright Web Developer"/>
+    <meta property="og:image" content="https://joewrightnc.github.io/images/ogphoto.png"/>
+    <meta property="og:site_name" content="Joe Wright Web Developer"/>
+    <meta property="og:description" content="Homepage for Joe Wright, a Creative Full Stack Web Developer based in Central North Carolina."/>
+    <meta name="description" content="Joe Wright Web Developer Full Stack React Homepage">
 	<meta name="keywords" content="Joe Wright, Web Developer, Full Stack, React, Node, Raleigh, Durham, Carrboro, Chapel Hill, North Carolina">
 	<link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
