updated resume with Samanage

--- a/resume.html
+++ b/resume.html
@@ -213,6 +213,23 @@
                                     <div class="exp-holder">
                                         <div class="exp">
                                             <div class="hgroup">
+                                                <h4><span>Web Developer</span> / Samanage</h4>
+                                                <h5 class="badge">Sep 2018 - Present</h5>
+                                            </div>
+                                            <p>
+                                                •Organization and Optimization of existing Wordpress Site
+                                            <br/>
+                                                •Development and maintainenance of Wordpress Child Theme Templates, Posts, & Pages
+                                            <br/>
+                                                •Executed initatives to A/B pages and optimize conversion rates
+                                            <br/>
+                                                •Development of Web Metrics Dashboard
+                                            <br/>
+                                                •Wordpress, PHP, Apache, Nginx, MySQL, Javascript, CSS (Sass, SCSS & Less), Semantic HTML5, SEO
+                                            </p>
+                                        </div>
+                                        <div class="exp">
+                                            <div class="hgroup">
                                                 <h4><span>Freelance Web Developer</span> / Joe Wright Web Development</h4>
                                                 <h5 class="badge">Nov 2017 - <span class="current">Present</span></h5>
                                             </div>
