updated portfolio with samnage

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,6 +53,29 @@
                                     </div>
                                     <div class="portfolio-container row isotope" id="portfolio-container">
                                         <!-- WORK 1 START -->
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui fullstack frontend">
+                                            <a class="open-project" target="_blank" href="https://www.samanage.com/">
+                                                <div class="portfolio-column">
+                                                    <div class="portfolio-hover">
+                                                        <div class="portfolio-content">
+                                                            <h2>Samanage Marketing Website</h2>
+                                                            <hr>
+                                                            <p>
+                                                                Full Stack Developer on a Marketing Dream Team!
+                                                                <br> 
+                                                                Wordpress, PHP, Apache, Nginx, MySQL, Javascript, CSS (Sass, SCSS & Less), Semantic HTML5, SEO, WP Engine
+                                                                <br>
+                                                                Click to Visit
+                                                            </p>
+                                                        </div>
+                                                        <div class="portfolio-overlay"></div>
+                                                    </div>
+                                                    <img src="images/portfolio/samanage.png" alt="">
+                                                </div>
+                                            </a>
+                                        </div>
+                                        <!-- WORK 1 END -->
+                                        <!-- WORK 1 START -->
                                         <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui fullstack reactJS nodeJS">
                                             <a class="open-project" target="_blank" href="https://stark-coast-40470.herokuapp.com/">
                                                 <div class="portfolio-column">
@@ -71,6 +94,29 @@
                                                         <div class="portfolio-overlay"></div>
                                                     </div>
                                                     <img src="images/portfolio/barterShop.png" alt="">
+                                                </div>
+                                            </a>
+                                        </div>
+                                        <!-- WORK 1 END -->
+                                        <!-- WORK 1 START -->
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui fullstack frontend">
+                                            <a class="open-project" target="_blank" href="https://blog.samanage.com/">
+                                                <div class="portfolio-column">
+                                                    <div class="portfolio-hover">
+                                                        <div class="portfolio-content">
+                                                            <h2>Samanage Marketing Blog</h2>
+                                                            <hr>
+                                                            <p>
+                                                                Full Stack Developer on a Marketing Dream Team!
+                                                                <br> 
+                                                                Wordpress, PHP, Apache, Nginx, MySQL, Javascript, CSS (Sass, SCSS & Less), Semantic HTML5, SEO, WP Engine
+                                                                <br>
+                                                                Click to Visit
+                                                            </p>
+                                                        </div>
+                                                        <div class="portfolio-overlay"></div>
+                                                    </div>
+                                                    <img src="images/portfolio/samanageBlog.png" alt="">
                                                 </div>
                                             </a>
                                         </div>
