working on header react app

--- a/resume.html
+++ b/resume.html
@@ -221,11 +221,11 @@
                                             <br/>
                                                 •Development and maintainenance of Wordpress Child Theme Templates, Posts, & Pages
                                             <br/>
-                                                •Executed initatives to A/B pages and optimize conversion rates
+                                                •Implemented Weekly A/B Experiments to optimize conversion rates
                                             <br/>
-                                                •Development of Web Metrics Dashboard
+                                                •Development of Web Metrics Dashboard utilizing full Google web suite including GTM, GA, GO, and GDS
                                             <br/>
-                                                •Wordpress, PHP, Apache, Nginx, MySQL, Javascript, CSS (Sass, SCSS & Less), Semantic HTML5, SEO
+                                                •Wordpress, PHP, Moustache, Apache, Nginx, MySQL, jQuery, Javascript, CSS (Sass, SCSS & Less), Semantic HTML5, SEO
                                             </p>
                                         </div>
                                         <div class="exp">
@@ -237,6 +237,8 @@
                                                 •Create, code and maintain sites from layout to final form according to the unique client needs.
                                             <br/>
                                                 •Worked on existing code bases to improve UX/UI for a variety of clients
+                                            <br/>
+                                                •Developed Several Web and iOS apps utilizing a variety of frameworks (React, React Native, Vue, Vue Native)
                                             </p>
                                         </div>
                                         <div class="exp">
